--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 dependencies = [
     "heavyball>=2.0.0",
     "torch>=2.1.0,<3.0",
-    "numpy>=1.26.0,<2.0",
+    "numpy>=2.3.4",
     "typer>=0.17.4",
     "optuna>=4.5.0",
     "optunahub>=0.3.1",
